--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css"/>
   <title>Document</title>
 </head>
 <body>
-  
+  <main>
+      <h1>text</h1>
+      <h1 class="title-text">text new</h1>
+      <h2 id="sub-title">text new</h2>
+      <!-- <h3 style="color: chartreuse;">text new</h3> Нельзя -->
+    </main>
 </body>
 </html>
